updated to Angular 15; fixed phpmyadmin, WorkingDirectory etc.